# acapy-resolver-didcomm

./: .gitignore  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  push.yml
demo/: Dockerfile.ngrok  README.md  docker-compose.live.yml  docker-compose.ngrok.yml  docker-compose.yml
demo/runner/: Dockerfile  __init__.py  __main__.py  inputs.json
demo/runner/inputs/: dids.json  vcs.json
demo/uniresolver/: Dockerfile  requirements.txt
did_comm_uniresolver/: __init__.py
did_comm_uniresolver/tests/: test_did_comm_universal.py
didcomm_resolver/: __init__.py  default_config.json  didcomm_universal.py  requester.py  resolver.py  routes.py
didcomm_resolver/acapy_tools/: __init__.py  awaitable_handler.py
didcomm_resolver/protocol/: v0_9.py
didcomm_resolver/role/requester/: __init__.py  routes.py
didcomm_resolver/role/resolver/: __init__.py
didcomm_uniresolver/: __init__.py  did_comm_universal.py  didcomm_universal.py
didcomm_uniresolver/acapy_tools/: __init__.py  awaitable_handler.py
didcomm_uniresolver/protocol/: v0_9.py
didcomm_uniresolver/tests/: test_did_comm_universal.py  test_didcomm_universal.py
didcomm_uniresolver/v0_9/: __init__.py
docker/: Dockerfile  README.md  default.yml  plugin-config.yaml
docker/tests/: Dockerfile.test.runner  README.md  docker-compose.yml  requirements.txt  test_didcomm_uniresolver.py
docker/tests/requester/: Dockerfile  config.yml  startup.sh
docker/tests/resolver/: config.yml
int/: Dockerfile.test.runner  README.md  docker-compose.dev.yml  docker-compose.peacekeeper.yml  docker-compose.yml  generate-client.sh  run_tests.sh  swagger.yaml  test_didcomm_resolver.py
int/acapy-backchannel/: README.md  pyproject.toml
int/acapy-backchannel/acapy_backchannel/: __init__.py
int/acapy-client/: .gitlab-ci.yml  .travis.yml  README.md  setup.py  tox.ini
int/acapy-client/.openapi-generator/: FILES
int/acapy-client/acapy_client/: __init__.py  api_client.py  configuration.py  exceptions.py  model_utils.py  rest.py
int/acapy-client/docs/: AMLRecord.md  ActionMenuApi.md  ActionMenuFetchResult.md  AdminAPIMessageTracing.md  AdminConfig.md  AdminMediationDeny.md  AdminModules.md  (+194 more)
int/acapy_resolver_mocked_github/: __init__.py  resolver_mock.py
int/mock_resolver/: __init__.py  mock-config.yaml  mock_resolver.py  resolver_config.yml
int/scripts/: openapi.yml
int/tests/: __init__.py  conftest.py  didcomm_uni_resolver.py  jsonld_examples.py  test_didcomm_connections.py  test_didcomm_jsonld.py  test_didcomm_resolve.py
int/unires/: Dockerfile  config.yml  default.yml  pyproject.toml  resolver_config.yml
tests/: __init__.py  conftest.py  test_didcomm_universal.py  test_resolver.py  test_routes.py  test_v0_9.py
tests/acapy_tools/: test_acapy_tools.py  test_awaitable_handler.py
(+427 files in other folders)
