[tool.poetry]
name = "didcomm-uni-resolver"
version = "0.1.0"
description = "testing DIDComm DID Resolution protocol handlers and Resolver interface"
authors = []
license = "Apache-2.0"
readme="README.md"
repository="https://github.com/danubetech/universal-resolver-didcomm"

[tool.poetry.dependencies]
python = "^3.6.9"
aries-cloudagent = {git = "https://github.com/Luis-GA/universal-resolver-didcomm", rev = "fix/plugin-interop"}
aiohttp = "~=3.6.3"
pydid = "~=0.2.3"
aioredis = "~=1.3.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
black = "^20.8b1"
pytest = "^6.2.2"
pytest-asyncio = "^0.14.0"
pytest-cov = "^2.11.1"
asynctest = "0.13.0"
pre-commit = "^2.11.1"

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "tests -p no:warnings --cov=didcomm_resolver"
